overflow-x for earth fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@ body {
   font-weight: 700;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
